# libgroove

./: .gitignore  AUTHORS  Groovy.pro  Makefile.am  Rules.am  TODO  configure.ac  configure.jml  suppressions
.autoproj/: Makefile.am  configure.ac
include/: Rules.am  about.h  common  fetcher.h  grooveclient.h  grooveclient_p.h  grooveplaylistmodel.h  groovesearchmodel.h  groovesong.h  groovesongsmodel.h  groovewindow.h  libgroove_global.h  preferences.h  property.h
include/common/: Rules.am  make_varmap.h
include/common/debug/: Rules.am  backtrace.h  signal.h  trace.h
include/common/format/: Formatter.h  FormatterBase.h  Interpreter.h  Rules.am  Specification.h
include/common/util/: Rules.am  array_size.h  auto_free.h  closure.h  common.h  force_assign.h  init_error.h  invoke_closure.h  make_closure_each.h  output.h  string.h  unimplemented.h  va_list_unpack.h  va_list_unpack0.h  va_list_unpackN.h  wrapper.h  xassert.h
include/frontend/: Rules.am
include/frontend/man/: Rules.am  main.h
include/frontend/ui/: groovewindow.h
include/frontend/uic/: Rules.am
include/groove/: Rules.am  client.h  controller.h  fetcher.h  playlistmodel.h  request.h  searchmodel.h  service.h  settings.h  song.h  songsmodel.h
include/groove/data/: Rules.am  album.h  albumptr.h  artist.h  artistptr.h  playlist.h  playlistptr.h  song.h  songptr.h  user.h  userptr.h
include/groove/private/: Rules.am  make_varmap.h  request.h
include/property/: Rules.am  prop.h  value_prop.h
m4/: pkgconfig.m4
qbuild/: .gitignore  Rules.am  groovy.pro
qbuild/Groovy/: Groovy.pro
qbuild/groovy/: groovy.pro
qbuild/groovy-gen/: groovy-gen.pro
qbuild/groovy-man/: groovy-man.pro
qbuild/groovy-mui/: groovy-mui.pro
qbuild/groovy-qml/: groovy-qml.pro
qbuild/groovy-uic/: groovy-uic.pro
qbuild/libgroove/: libgroove.pro
qbuild/source-common/: source-common.pro
qbuild/ui-common/: ui-common.pro
res/: Rules.am  icons.qrc  images.qrc  qml.qrc  symbols.qrc  views.qrc  widgets.qrc
res/views/: FavouritesPage.qml  PlaylistPage.qml  SearchPage.qml  SongListDelegate.qml  mainwindow.qml
res/widgets/: CompletionList.qml  CompletionListDelegate.qml  Playlist.qml  PlaylistDelegate.qml  SearchBox.qml  SearchResults.qml  SearchResultsDelegate.qml  TestModel.qml  TestPlaylist.qml
reveng/more.php/: addShortcutToUserSidebar.js  albumGetSongs.js  artistGetSongs.js  authenticateUser.js  autoplayGetSong.js  autoplayVoteDown.js  autoplayVoteUp.js  changeFeedSettings.js  changeNotificationSettings.js  changeNotificationSettings.txt  changePassword.js  changePrivacySettings.js  changeUserInfo.js  favorite.js  flagSong.js  getCombinedProcessedFeedData.js  getContactInfoForFollowers.js  getFavoriteIDs.js  getFavorites.js  getIsTargetingActive.js  getRecentlyActiveUsers.js  getSearchResultsEx.js  getStreamKeyFromSongIDEx.js  getUserByID.js  getUserSettings.js  getUserSidebar.js  logHomepageView.js  markSongComplete.js  markSongDownloadedEx.js  markSongQueueSongPlayed.js  popularGetSongs.js  registerUser.js  sendInvites.js  sendShare.js  songGetFans.js  unfavorite.js  userAddSongsToLibrary.js  userGetLibraryTSModified.js  userGetPlaylists.js  userGetSongsInLibrary.js  (+1 more)
reveng/service.php/: addSongsToQueueExt.js  createPlaylistEx.js  getAffiliateDownloadURLs.js  getArtistsForTag.js  getDetailsForBroadcast.js  logoutUser.js  markSongSkipped.js  markStreamKeyOver30Seconds.js  overwriteExistingPlaylist.js
src/: Rules.am  common  common.am  grooveclient_p.cpp  grooverequest.cpp  groovesearchmodel.cpp  groovesong.cpp  src.pro
src/common/: Rules.am
src/common/debug/: Rules.am  backtrace.cpp  fork_abort.cpp  fork_trace.cpp
src/common/format/: FormatterBase.cpp  Interpreter.cpp  Rules.am  Specification.cpp  grammar.ypp
src/common/util/: Rules.am  xassert.cpp
src/format/: Rules.am  format_test.cpp
src/frontend/: Rules.am
src/frontend/man/: Rules.am  main.cpp
src/frontend/qml/: Rules.am  SearchBox.qml  controller.cpp  controller.h  main.cpp  main.qml  qmlcontroller.cpp  qmlcontroller.h
src/frontend/ui/: about.cpp
src/frontend/uic/: Rules.am  about.cpp  crash.cpp  groovewindow.cpp  main.cpp  preferences.cpp
src/groovy/: Rules.am  about.cpp  crash.cpp  debug.cpp  fetcher.cpp  groovewindow.cpp  main.cpp  preferences.cpp
src/groovy/frontend/: groovewindow.cpp  preferences.cpp
src/libgroove/: Rules.am  grooveclient.cpp  grooveclient_p.cpp  grooveplaylistmodel.cpp  groovesearchmodel.cpp  groovesong.cpp  groovesongsmodel.cpp
src/libgroove_client/: Rules.am  client-request.cpp  client-request.h  client.cpp  private.cpp  private.h  request.cpp
src/libgroove_common/: Rules.am  debug.cpp  settings.cpp
src/libgroove_controller/: Rules.am  controller.cpp
src/libgroove_data/: Rules.am  album.cpp  artist.cpp  playlist.cpp  song.cpp  user.cpp
src/libgroove_fetcher/: Rules.am  fetcher.cpp
src/libgroove_link/: Rules.am  grooveclient.cpp  grooveclient_p.cpp  grooveplaylistmodel.cpp  groovesearchmodel.cpp  groovesong.cpp
src/libgroove_playlistmodel/: Rules.am  playlistmodel.cpp
src/libgroove_searchmodel/: Rules.am  searchmodel.cpp
src/libgroove_service/: Rules.am  grooveservice.cpp  methods.cpp  reply.h  request.cpp  request.h  service.cpp
src/libgroove_service/methods/: Rules.am  addShortcutToUserSidebar.cpp  addSongsToQueueExt.cpp  albumGetFans.cpp  albumGetSongs.cpp  artistGetAlbums.cpp  artistGetFans.cpp  artistGetSimilarArtists.cpp  artistGetSongkickEvents.cpp  artistGetSongs.cpp  authenticateUser.cpp  authenticateUserEx.cpp  autoplayGetSong.cpp  autoplayRemoveVoteDownEx.cpp  autoplayRemoveVoteUpEx.cpp  autoplayVoteDown.cpp  autoplayVoteDownEx.cpp  autoplayVoteUp.cpp  autoplayVoteUpEx.cpp  broadcastSong.cpp  changeFeedSettings.cpp  changeFollowFlags.cpp  changeNotificationSettings.cpp  changePassword.cpp  changePrivacySettings.cpp  (+107 more)
src/libgroove_settings/: Rules.am  settings.cpp
src/libgroove_song/: Rules.am  song.cpp
src/libgroove_songsmodel/: Rules.am  songsmodel.cpp
src/ui/: Rules.am  about.ui  groovewindow.ui  preferences.ui
src/uic/: Rules.am  groovewindow.ui  preferences.ui
(+29 files in other folders)
